<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_cancel">Cancel</string>
    <string name="action_apply">Apply</string>
    <string name="action_apply_restart">Apply &amp; Restart</string>
    <string name="action_default">Default</string>
    <string name="action_settings">Settings</string>
    <string name="action_back">Back</string>
    <string name="action_open">Open</string>
...
    <string name="logs_delete_count">Files to delete:</string>
    <string name="logs_one_file">1 file</string>
    <string name="logs_permanent">Permanent Deletion</string>
    <string name="logs_delete_file">Delete File</string>
    <string name="logs_select_level">Select Log Level</string>
    <string name="action_export">Export</string>
    <string name="action_delete">Delete</string>
    <string name="settings_tab_phones">Phones</string>
    <string name="settings_tab_control">Control</string>
    <string name="settings_tab_logs">Logs</string>
    <string name="settings_tab_teyes">FYT</string>
    <string name="settings_expanded">Expanded</string>
    <string name="settings_collapsed">Collapsed</string>
...
